--- a/src/app/contactmanager/components/side-nav/side-nav.component.html
+++ b/src/app/contactmanager/components/side-nav/side-nav.component.html
@@ -7,16 +7,18 @@
       Contacts
     </mat-toolbar>
     <mat-nav-list>
-      <mat-list-item *ngFor="let user of users | async">
-        <a matListItemTitle href="...">
-          <mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{ user.name }}
-        </a>
-      </mat-list-item>
+      <div *ngFor="let user of users | async">
+        <a matLine [routerLink]="['/contactmanager', user.id]">
+            <mat-list-item>
+              <mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{ user.name }}
+            </mat-list-item>
+          </a>
+      </div>
     </mat-nav-list>
-    
   </mat-sidenav>
   <div class="app-sidenav-content">
-    <app-toolbar (toggleSidenav)="sidenav.toggle()" ></app-toolbar>
+    <app-toolbar (toggleSidenav)="sidenav.toggle()">
+    </app-toolbar>
     <div class="wrapper">
       <router-outlet></router-outlet>
     </div>
