--- a/src/app/contactmanager/components/notes/notes.component.html
+++ b/src/app/contactmanager/components/notes/notes.component.html
@@ -4,19 +4,19 @@
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. some" #input>
   </mat-form-field>
 
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" matSort>
     <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
       <td mat-cell *matCellDef="let note"> {{note.id}} </td>
     </ng-container>
   
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Title </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
       <td mat-cell *matCellDef="let note"> {{note.title}} </td>
     </ng-container>
   
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
       <td mat-cell *matCellDef="let note"> {{note.date | date: "yyyy-MM-dd"}} </td>
     </ng-container>
   
