--- a/src/app/contactmanager/components/side-nav/side-nav.component.html
+++ b/src/app/contactmanager/components/side-nav/side-nav.component.html
@@ -1,5 +1,7 @@
 
-<mat-sidenav-container class="app-sidenav-container">
+<mat-sidenav-container class="app-sidenav-container"
+                      [class.dark-theme]="isDarkTheme"
+                      [dir]="textLayoutDirection">
   <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10"
                [opened]="!isScreenSmall"
                [mode]="isScreenSmall ? 'over' : 'side'">
@@ -17,7 +19,9 @@
     </mat-nav-list>
   </mat-sidenav>
   <div class="app-sidenav-content">
-    <app-toolbar (toggleSidenav)="sidenav.toggle()">
+    <app-toolbar (toggleSidenav)="sidenav.toggle()"
+                 (toggleTheme)="toggleTheme()"
+                 (toggleDirection)="toggleDirection()">
     </app-toolbar>
     <div class="wrapper">
       <router-outlet></router-outlet>
